# Ai-exercise-2-week-3

./: Datavisualization.ipynb  MachineLearning.ipynb  MachinneLearning.ipynb  README.md  intro_pandas1.ipynb  main.py  pyproject.toml  test.ipynb
